--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -21,12 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!--<include layout="@layout/content_navigation_drawer" />-->
-    
-    <FrameLayout
-        android:id ="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+    <include layout="@layout/content_navigation_drawer" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
