--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -13,4 +13,13 @@
     tools:context="com.example.tuhin_khare.hiker.NavigationDrawer"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.tuhin_khare.hiker.MapsActivity" />
+
 </RelativeLayout>
