--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#c72c2c03F9F</color>
+    <color name="colorPrimaryDark">#F10000</color>
     <color name="colorAccent">#FFFFFF</color>
 </resources>
